--- a/client/package.json
+++ b/client/package.json
@@ -2,5 +2,11 @@
   "name": "webless",
   "version": "0.0.0",
   "description": "less-like big files viewer",
-  "dependencies": {"binarysearch": "~0.2.4"}
+  "dependencies": {
+    "binarysearch": "~0.2.4"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-contrib-connect": "~0.7.1"
+  }
 }
